--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "start": "node src/server.js",
     "test": "jest --coverage --runInBand --forceExit",
     "lint": "eslint src/** teste/** --fix",
-    "secure-mode": "jest --watch --verbose=true"
+    "secure-mode": "jest --watch --verbose=true",
+    "precommit": "npm run lint && npm test",
+    "prepush": "npm run lint"
   },
   "husky": {
     "hooks": {
